--- a/Weitianshi/pages/message/viewProjectUser/viewProjectUser.wxml
+++ b/Weitianshi/pages/message/viewProjectUser/viewProjectUser.wxml
@@ -2,6 +2,8 @@
 <import src="/pages/Template/Template.wxml" />
 <include src='/utils/wxml/netWork' />
 <view wx:if="{{nonet}}">
+  <!--pages/message/viewProjectUser/viewProjectUser.wxml-->
+  <import src="/pages/Template/Template.wxml" />
   <view class="browseMeTitle flex" style="justify-content: space-between;">
     <view class="title flex">
       <view class="block"></view>
@@ -73,36 +75,45 @@
                 </view>
               </view>
 
-            <view class="aline"></view>
-            <view class='t-cardBottom flex' wx:if='{{item.user_id!=user_id}}'>
-              <view class="t-history1" wx:if='{{item.follow_status==0}}' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='contactsAdd'>
-                <image class='t-itemPic' src='/img/icon-jiahaoyou@2x.png'></image>
-                <span>加好友</span>
+              <view class="aline"></view>
+              <view class='t-cardBottom flex' wx:if='{{item.user_id!=user_id}}'>
+                <view class="t-history1" wx:if='{{item.follow_status==0}}' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='contactsAdd'>
+                  <image class='t-itemPic' src='/img/icon-jiahaoyou@2x.png'></image>
+                  <span>加好友</span>
+                </view>
+                <view class="t-history1" wx:if='{{item.follow_status==1}}' hover-class='t-hoverColor' hover-stop-propagation='true' data-telephone="{{item.user_mobile}}" catchtap="telephone">
+                  <image class='t-itemPic' src='/img/icon-dadianhua@2x.png'></image>
+                  <span>打电话</span>
+                </view>
+                <view class="t-history1" wx:if='{{item.follow_status==2}}' hover-class='t-hoverColor' hover-stop-propagation='true'>
+                  <!-- <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image> -->
+                  <span style="color:#ccc">待验证</span>
+                </view>
+                <view class="t-history1" wx:if='{{item.follow_status==3}}' data-id='{{item.user_id}}' catchtap='contactsAddDirect' hover-class='t-hoverColor' hover-stop-propagation='true'>
+                  <image class='t-itemPic' src='/img/icon-jiahaoyou@2x.png'></image>
+                  <span>加好友</span>
+                </view>
+                <view class="t-line"></view>
+                <view class='t-cardBottomItem2 flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='projectPush'>
+                  <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
+                  <span>提交项目</span>
+                </view>
               </view>
-              <view class="t-history1" wx:if='{{item.follow_status==1}}' hover-class='t-hoverColor' hover-stop-propagation='true' data-telephone="{{item.user_mobile}}" catchtap="telephone">
-                <image class='t-itemPic' src='/img/icon-dadianhua@2x.png'></image>
-                <span>打电话</span>
-              </view>
-              <view class="t-history1" wx:if='{{item.follow_status==2}}' hover-class='t-hoverColor' hover-stop-propagation='true'>
-                <!-- <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image> -->
-                <span style="color:#ccc">待验证</span>
-              </view>
-              <view class="t-history1" wx:if='{{item.follow_status==3}}' data-id='{{item.user_id}}' catchtap='contactsAddDirect' hover-class='t-hoverColor' hover-stop-propagation='true'>
-                <image class='t-itemPic' src='/img/icon-jiahaoyou@2x.png'></image>
-                <span>加好友</span>
-              </view>
-              <view class="t-line"></view>
-              <view class='t-cardBottomItem2 flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='projectPush'>
-                <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
-                <span>提交项目</span>
-              </view>
+              <view class='t-cardBottom flex' wx:if='{{item.user_id==user_id}}'></view>
             </view>
-            <view class='t-cardBottom flex' wx:if='{{item.user_id==user_id}}'></view>
           </view>
         </block>
         <template is="theBottom" wx:if="{{contacts!==''}}"></template>
       </view>
     </scroll-view>
   </view>
+
+  <!--没有更多-->
+  <!-- <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view> -->
+
+  <!--没有数据-->
+  <!-- <view class="nullState" wx:if="{{contacts=='' || !contacts}}">
+  <view class="nothing">没有数据</view>
+</view> -->
   <template is="isEmpty" data="{{emptyNumber:contacts}}"></template>
 </view>
