--- a/Weitianshi/activitySignIn/pages/signCheckIndentity/signCheckIndentity.wxml
+++ b/Weitianshi/activitySignIn/pages/signCheckIndentity/signCheckIndentity.wxml
@@ -7,7 +7,7 @@
       <input value='{{mobile}}' placeholder='请输入活动报名填写的手机号' bindblur='mobile'></input>
     </view>
     <view class='footer'>
-      <button bindtap='checkIndentity'>确定</button>
+      <button bindtap='checkIndentity' hover-class='classHover'>确定</button>
     </view>
   </view>
   <!--活动基本信息  -->
