--- a/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
@@ -192,30 +192,32 @@ page {
 }
 
 .projectDetailBox {
-  /* padding: 32rpx; */
+  padding: 32rpx 0 32rpx 32rpx;
   height: auto;
-  position: relative;
   padding-bottom: 0;
+  position: relative;
 }
 
 .describle {
   font-size: 32rpx;
   color: #333;
   line-height: 48rpx;
-  text-align: left !important;
-  /* margin-bottom: 20rpx; */
+  /* text-align: left !important; */
+  font-weight: bold;
+  margin-bottom: 20rpx;
 }
 
 .industry {
-  font-family: PingFangSC-Regular;
-  font-size: 24rpx;
-  color: #666;
-  line-height: 26rpx;
-  text-align: left;
-  padding: 8rpx 16rpx;
   background: #f5f5f5;
   border-radius: 4rpx;
-  margin-right: 30rpx;
+  padding: 0 16rpx;
+  height: 50rpx;
+  font-size: 24rpx;
+  color: #666;
+  line-height: 50rpx;
+  text-align: center;
+  margin: 0 16rpx 20rpx 0;
+  white-space: nowrap;
   margin-bottom: 20rpx;
 }
 
@@ -228,9 +230,9 @@ page {
 .allProjectDetail {
   font-size: 26rpx;
   color: #666;
-  line-height: 26rpx;
+  line-height: 32rpx;
   text-align: left;
-  margin-bottom: 34rpx;
+  margin-bottom: 32rpx;
 }
 
 .ProjectClues {
