--- a/Weitianshi/utils/wxml/projectDetail.wxml
+++ b/Weitianshi/utils/wxml/projectDetail.wxml
@@ -139,7 +139,7 @@
     <!-- <view class="projectScore" wx:if="{{score==true&&show_detail != 1}}" bindtap="projectRemark">项目评价</view> -->
     <!--申请查看未能过-->
     <view class="lockStyle" wx:if="{{show_detail != 1}}">
-      <image src="/img/img-suozhu@2x.png" class="lockImg"></image>
+      <image src="{{projectImg}}" class="lockImg"></image>
       <view class="lockText">认证投资人和认证买方FA可以查看项目的完整信息</view>
       <text class="lockText1">基本介绍\t\t \t\t\t\t\t\t\t\t\t\t·\t\t 更多产品 · 融资信息 · 核心团队 · 里程碑</text>
       <!-- <view wx:if="{{button_type != 1}}"> -->
