--- a/Weitianshi/activitySignIn/pages/signCheckIndentity/signCheckIndentity.wxss
+++ b/Weitianshi/activitySignIn/pages/signCheckIndentity/signCheckIndentity.wxss
@@ -10,13 +10,13 @@
   padding: 24rpx 32rpx;
   font-weight: 800;
   font-size: 30rpx;
-  background: #f5f5f5;
+  /* background: #f5f5f5; */
   border-radius: 16rpx;
 }
 
 .checkCard {
   background: #f5f5f5;
-  border-radius: 16rpx;
+  border-radius: 8rpx;
 }
 
 .checkCard .inputTel {
@@ -47,8 +47,9 @@
 .activityCard {
   margin-top: 36rpx;
   font-size: 28rpx;
-  padding: 32rpx 32rpx;
-  border-radius: 16rpx;
+  padding:  0;
+  border-radius: 8rpx;
+  background: #f5f5f5;
 }
 
 .activityCard .title {
@@ -67,7 +68,7 @@
 }
 
 .activityCard .name {
-  flex: 42;
+  flex: 45;
   margin-right: 32rpx;
   color: #999;
   text-align: justify;
@@ -81,4 +82,6 @@
 .classHover{
   background: #2D6BC9!important;
 }
-
+.cardItem:last-child{
+  border-radius:0 0 8rpx 8rpx;
+}
