--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -23,7 +23,7 @@
       <view class='jumpBox flex'>
         <template is="jumpBlock" data="{{text:'投资机构',tapName:'jumpOrg',src:'/img/icon-touzijigou@2x.png'}}"></template>
         <template is="jumpBlock" data="{{text:'投资人',tapName:'jumpInvestor',src:'/img/icon-touziren@2x.png'}}"></template>
-        <template is="jumpBlock" data="{{text:'FA(融资顾问)',tapName:'jumpFinancingAdvisor',src:'/img/icon-FA@2x.png'}}"></template>
+        <template is="jumpBlock" data="{{text:'融资顾问',tapName:'jumpFinancingAdvisor',src:'/img/icon-FA@2x.png'}}"></template>
         <template is="jumpBlock" data="{{text:'潜在投资方',tapName:'potentialInvestor',src:'/img/icon-qianzai@2x.png'}}"></template>
       </view>
 
@@ -98,7 +98,4 @@
       <view class='jumpToContent'>{{text}}</view>
     </view>
   </template>
-</view>
-<view wx:if="{{!nonet}}">
-  <template is="network"></template>
 </view>
