--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -20,23 +20,25 @@
       </view>
     </view>
     <view class="editBottom">
-      <view class="personCompany flex"  wx:if="{{user.user_brand || user.user_company_name}}">
+      <view class="personCompany flex">
         <image class='bottomPic' src='/img/icon-C@2x.png'></image>
         <view class="personCompanyContent">
-          <label wx:if="{{user.user_brand}}">{{user.user_brand}} · </label>
-          <label wx:if="{{user.user_company_name}}">{{user.user_company_name}}</label>
+          <label wx:if="{{user.user_brand}}" wx:if="{{user.user_brand}}">{{user.user_brand}} · </label>
+          <label wx:if="{{user.user_company_name}}" wx:if="{{user.user_company_name}}">{{user.user_company_name}}</label>
         </view>
         <view class="checkNum" catchtap="searchIdentification" wx:if="{{IdentificationShow == 1&& playTime == 0}}">查税号</view>
       </view>
-      <view class="personCompany flex"  wx:if="{{user.user_mobile}}">
+      <view class="personCompany flex">
         <image class='bottomPic' src='/img/icon-T@2x.png'></image>
-        <view class="personTelephone">
+        <view class="personTelephone" wx:if="{{user.user_mobile}}">
           <label data-telephone="{{user.user_mobile}}" id="{{blue==-1?'mobileStyle':''}}" catchtap="telephone">{{user.user_mobile}}</label>
         </view>
+        <view wx:if="{{!user.user_mobile}}" class="personEmail">暂未透露</view>
       </view>
-      <view class="personCompany flex"  wx:if="{{user.user_email}}">
+      <view class="personCompany flex">
         <image class='bottomPic' src='/img/icon-E@2x.png'></image>
-        <view class="personEmail">{{user.user_email}}</view>
+        <view class="personEmail" wx:if="{{user.user_email}}">{{user.user_email}}</view>
+        <view class="personEmail" wx:if="{{!user.user_email}}">暂未透露</view>
       </view>
     </view>
   </view>
@@ -696,7 +698,7 @@
     <view class='allReset' bindtap='allReset'>清空</view>
   </view>
 </template>
- 
+
 <!--筛选结果展示横列(单个)  -->
 <template name='searchResult_single'>
   <!--有联动关系  -->
@@ -752,7 +754,7 @@
               <view class="t-user_image flex" wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
             </view>
             <view>
-              <view class="t-userInfo flex"> 
+              <view class="t-userInfo flex">
                 <view class="t-userName">{{item.user.user_name}}</view>
                 <view class="t-userCareer">{{item.user.user_career}}</view>
                 <view class="t-userCompany" style="text-align:left">{{item.user.user_company}}</view>
@@ -895,7 +897,7 @@
   <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="userDetail">
     <view class="t-applyMyProject t-contacts-detailm">
       <view class="t-introduceBox flex">
-  <image src="{{item.investor_logo_url}}" class="t-userPic" wx:if="{{item.investor_logo_url}}"></image>
+        <image src="{{item.investor_logo_url}}" class="t-userPic" wx:if="{{item.investor_logo_url}}"></image>
         <view class="t-userName">{{item.investor_name}}</view>
         <view class="t-userPart flex" wx:if="{{item.authentication[0].group_title}}">
           <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='投资人' }}" src="/img/img-touziren@2x.png"></image>
