--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -917,15 +917,16 @@ textarea {
 }
 
 .t-applyMyProject .t-userPart {
-  font-size: 20rpx;
+  /* font-size: 20rpx;
   color: #d3b987;
   line-height: 22rpx;
   text-align: left;
-  align-items: flex-end;
-  max-width: 200rpx;
-  text-overflow: ellipsis !important;
+  align-items: center; */
+  /* max-width: 200rpx; */
+  /* text-overflow: ellipsis !important;
   overflow: hidden;
-  white-space: nowrap;
+  white-space: nowrap; */
+  
   /* margin-right: 8rpx; */
 }
 
@@ -990,6 +991,7 @@ textarea {
   width: 98rpx;
   height: 36rpx;
   margin-right: 16rpx;
+  margin-bottom: 4rpx;
 }
 
 .t-userPart1 {
@@ -1132,6 +1134,7 @@ textarea {
   background: #f5f5f5;
   border-radius: 2px;
   padding: 4rpx 8rpx;
+  margin-bottom: 4rpx;
 }
 
 .t-color {
@@ -1157,7 +1160,7 @@ textarea {
 }
 
 .t-history {
-  width: 60%;
+  width: 92%;
   padding-left: 32rpx;
   color: #333;
   font-size: 12px;
@@ -1207,8 +1210,8 @@ textarea {
   align-items: center;
   vertical-align: middle;
   justify-content: center;
-  width: 33%;
-  padding-right: 44rpx;
+  width: 38%;
+  padding-right: 32rpx;
   height: 94rpx;
   font-size: 30rpx;
   color: #3378e0;
@@ -1377,9 +1380,9 @@ textarea {
 }
 
 .t-line567 {
-  width: 2rpx;
+  width: 1rpx;
   height: 35rpx;
-  background: #f2f2f2;
+  background: #f0f0f0;
   margin-top: 28rpx;
 }
 
@@ -1600,7 +1603,7 @@ textarea {
 .t-pipei {
   width: 110rpx;
   position: absolute;
-  right: 0rpx;
+  right: 8rpx;
   top: 32rpx;
 }
 
@@ -1611,7 +1614,8 @@ textarea {
 .t-numPipei {
   font-size: 40rpx;
   color: #f95355;
-  font-weight: bold
+  font-weight: bold;
+  text-align: right!important;
 }
 
 .t-numPipei1 {
