--- a/Weitianshi/activitySignIn/pages/signIndentityCard/signIndentityCard.wxml
+++ b/Weitianshi/activitySignIn/pages/signIndentityCard/signIndentityCard.wxml
@@ -1,7 +1,7 @@
 <import src="/pages/Template/Template.wxml" />
 <image src="{{signIndentityCard}}" class="activityImg">
   <image class="activityUrl" wx:if='{{userInfo.user_logo_url}}' src="{{userInfo.user_logo_url}}"></image>
-  <view  class="activityUrl" wx:if='{{userInfo.user_logo_text}}'>{{userInfo.user_logo_text}}</view>
+  <view class="activityUrl" wx:if='{{userInfo.user_logo_text}}'>{{userInfo.user_logo_text}}</view>
   <view class="activityName">{{userInfo.user_name}}</view>
   <view class="activityCom">{{userInfo.user_company_name}}</view>
   <view class="activityMobile flex">
@@ -34,17 +34,22 @@
   <label style="width:26rpx;height:2rpx;background:#333;margin-left:20rpx;"></label>
 </view>
 <!-- 已经报名用户列表 -->
-<block wx:for="{{investorList}}" wx:key="{{investorList}}">
-  <view class='investorCard'>
-    <view class="t-investorColor" hover-class='t-hoverColor'>
-      <template is='InvestorCard' data='{{item,user_id}}'></template>
-      <view class="t-alineHeight"></view>
-      <template is='cardBottom1' data='{{item,user_id}}'></template>
+<scroll-view style="height:1108rpx;" scroll-y="true" bindscrolltolower='loadMore'>
+  <block wx:for="{{investorList}}" wx:key="{{investorList}}">
+    <view class='investorCard'>
+      <view class="t-investorColor" hover-class='t-hoverColor'>
+        <template is='InvestorCard' data='{{item,user_id}}'></template>
+        <view class="t-alineHeight"></view>
+        <template is='cardBottom1' data='{{item,user_id}}'></template>
+      </view>
     </view>
-  </view>
-</block>
+  </block>
+</scroll-view>
 <view style='height:128rpx;'></view>
+<!-- 操作按钮 -->
 <view class="activityBottom flex">
   <button class="activityMeet" disabled='true' style='border-color:#ccc;' bindtap='goToActivityAgenda'>活动议程</button>
   <button class="activityWei" bindtap='goToIndex'>去微天使看看</button>
 </view>
+<!--报错  -->
+<view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
