--- a/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
@@ -206,7 +206,7 @@ page {
   font-size: 32rpx;
   color: #333;
   line-height: 48rpx;
-  /* text-align: left !important; */
+  text-align: left !important;
   font-weight: bold;
   margin-bottom: 20rpx;
 }
