1-16-霍春阳-下班
navigateTo=>app.href

--- a/Weitianshi/pages/message/beAddedContacts/beAddedContacts.wxml
+++ b/Weitianshi/pages/message/beAddedContacts/beAddedContacts.wxml
@@ -101,7 +101,7 @@
             </view>
           </view>
         </block>
-        <template is="theBottom" wx:if="{{investorList!==''}}"></template>
+        <template is="theBottom" wx:if="{{investorList!=='' && atBottom == true}}"></template>
       </view>
     </scroll-view>
   </view>
