--- a/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
@@ -1552,7 +1552,7 @@ page {
 
 #projectBox .teamPro {
   margin-bottom: 22rpx;
-  margin-top: 40rpx;
+  margin-top: 10rpx;
 }
 
 /*空白页*/
@@ -1771,9 +1771,9 @@ page {
   border-radius: 56rpx;
   border: 1rpx solid #293b55;
   text-align: center;
-  height: 46rpx;
+  height: 44rpx;
   width: auto;
-  line-height: 46rpx;
+  line-height: 44rpx;
   padding: 0rpx 16rpx;
   margin-right: 24rpx;
   margin-bottom: 18rpx;
@@ -2127,8 +2127,8 @@ page {
 .aline {
   /* margin: 0 32rpx; */
   width: 100%;
-  height: 2rpx;
-  background: #e6e6e6;
+  height: 1rpx;
+  background: #f0f0f0;
 }
 
 .bottomBox {
