--- a/Weitianshi/utils/wxml/threeTab.wxml
+++ b/Weitianshi/utils/wxml/threeTab.wxml
@@ -393,14 +393,17 @@
     <!--买家图谱  -->
     <swiper-item wx:if='{{show_company}}'>
       <view>
-        <view class="t-matchButton flex">
-          <!--t-matchButton1  代表选中  -->
-          <button class="{{matchBut?'t-matchButton1':'t-matchButton3'}}" bindtap='matchButt'>投资人(<label>{{matchCount}}</label>)
-          </button>
-          <button class="{{matchBut1?'t-matchButton4':'t-matchButton2'}}" bindtap='matchButt1'>投资机构(<label>{{investment_total_num}}</label>)</button>
-        </view>
+
         <!--买家图谱  -->
         <scroll-view wx:if="{{matchBut}}" scroll-y="true" style="height: 900rpx;" bindscrolltolower="loadMore">
+          <view class="t-matchButton flex">
+            <!--t-matchButton1  代表选中  -->
+            <button class="{{matchBut?'t-matchButton1':'t-matchButton3'}}" bindtap='matchButt'>投资人(
+              <label>{{matchCount}}</label>)
+            </button>
+            <button class="{{matchBut1?'t-matchButton4':'t-matchButton2'}}" bindtap='matchButt1'>投资机构(
+              <label>{{investment_total_num}}</label>)</button>
+          </view>
           <view class="buyerPage">
             <!-- <view id="matching">匹配推荐：
             <label>{{matchCount}}</label>个</view> -->
@@ -428,6 +431,12 @@
         </scroll-view>
         <!--机构版买家图谱  -->
         <scroll-view wx:if="{{matchBut1}}" style='height:900rpx;' scroll-y='true' scroll-top="{{scroll}}" bindscrolltolower='loadMore1'>
+           <view class="t-matchButton flex">
+          <!--t-matchButton1  代表选中  -->
+          <button class="{{matchBut?'t-matchButton1':'t-matchButton3'}}" bindtap='matchButt'>投资人(<label>{{matchCount}}</label>)
+          </button>
+          <button class="{{matchBut1?'t-matchButton4':'t-matchButton2'}}" bindtap='matchButt1'>投资机构(<label>{{investment_total_num}}</label>)</button>
+        </view>
           <view class="{{investment_list.length==0?'media123':'media12'}}">
             <view class="matchIntro">{{newPage.pro_intro}}</view>
             <view id="investment1" wx:if="{{investment_list.length!=0}}">
